log
Wed 27 Sep 2023 01:50:53 AM UTC: 
 heap.c | 13 ++++++++++++-
 1 file changed, 12 insertions(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:27: error: ‘heapElement’ undeclared (first use in this function); did you mean ‘heapElem’?
   43 |   nuevoHeap->heapArray = (heapElement*) malloc (nuevoHeap->capac * sizeof(heapElement));
      |                           ^~~~~~~~~~~
      |                           heapElem
heap.c:43:27: note: each undeclared identifier is reported only once for each function it appears in
heap.c:43:39: error: expected expression before ‘)’ token
   43 |   nuevoHeap->heapArray = (heapElement*) malloc (nuevoHeap->capac * sizeof(heapElement));
      |                                       ^
Compilation failed
eaf4167
Wed 27 Sep 2023 01:51:29 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
heap.c: In function ‘createHeap’:
heap.c:43:55: error: ‘*nuevoHeap.capac’ may be used uninitialized [-Werror=maybe-uninitialized]
   43 |   nuevoHeap->heapArray = (heapElem*) malloc (nuevoHeap->capac * sizeof(heapElem));
      |                                              ~~~~~~~~~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
49334f7
Wed 27 Sep 2023 01:52:29 AM UTC: 
 heap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|3
total_score: 10/70
e3d865c
Wed 27 Sep 2023 01:55:31 AM UTC: 
 heap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|3
total_score: 10/70
a726d39
Wed 27 Sep 2023 01:58:12 AM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|3
total_score: 10/70
6288324
Wed 27 Sep 2023 02:09:20 AM UTC: 
 heap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  1|3
total_score: 10/70
37cf37f
